# pod-chaos-monkey

./: .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
deploy/: cronjob.yaml  dummy.yaml  kustomization.yaml  rbac.yaml
pod_chaos_monkey/: __main__.py  namespaced_delete.py
tests/: test_pod_chaos_monkey.py
